--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
+    "react-audio-player": "^0.11.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-wavesurfer": "^0.8.6",
+    "recompose": "^0.30.0",
+    "waveplayer": "^1.2.1",
+    "wavesurfer.js": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
